# zep-ai-memory-api

./: .bandit  .dockerignore  .env.test  Dockerfile  PLANO_IMPLEMENTACAO.md  README.md  best_practice.md  deploy-setup.sh  docker-compose.yml  env.example  env.production.example  pyproject.toml  requirements.txt  run.py  setup.sh  test_api.py  zep.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
docs/: best_practice.md  zep.md
examples/: n8n_workflow_example.json
scripts/: deploy.sh
src/: __init__.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  graph.py  health.py  memory.py  users.py
src/core/: __init__.py  config.py
src/core/auth/: __init__.py  jwt_auth.py
src/core/cache/: __init__.py  redis_cache.py
src/core/metrics/: __init__.py  prometheus.py
src/core/middleware/: __init__.py  rate_limit.py  security.py
src/core/models/: __init__.py  memory.py
src/core/zep_client/: __init__.py  client.py
tests/: __init__.py  conftest.py  test_auth.py  test_cache.py  test_cache_backup.py  test_health.py  test_health_backup.py
